--- a/src/main/resources/simpleci/css/core.css
+++ b/src/main/resources/simpleci/css/core.css
@@ -1,9 +1,11 @@
 .centered {
-    margin: 50px 0;
-    padding: 0;
     text-align: center;
 }
 
-.matchStrap {
-    background-color: #eee;
+body {
+    padding-top: 60px;
+}
+
+.job-table {
+    width: 400px;
 }
